Added SEO to all pages, changed title to H1 tag for SEO, added robots.txt, removed accessibility warnings

--- a/src/content/portfolios/portfolios.yml
+++ b/src/content/portfolios/portfolios.yml
@@ -1,9 +1,9 @@
 - title: travel
   slug: /travel
-  description: My journey as photographer began with my travels.
+  description: My journey in photography began with my travels.
   photos:
   - name: travel-01-WhiteDessertEgypt20305
-    caption: The White Dessert in Egypt 2005.
+    caption: The White Dessert in Egypt.  In 2005, I went to Egypt to photograph the dance music scene in Sharm El Shiekh.  This was a large departure.
     videoUrl: ~
   - name: travel-02-HuangshanMountains
     caption: Huangshan Mountains China 2002.
@@ -15,10 +15,10 @@
     caption: Girl with a Dolphin Fountain.  Tower Bridge, London, March 2002
     videoUrl: ~
   - name: travel-05-DJatMoorgBarcelonaAugust2002
-    caption: In August 2002, I traveled to Ibiza and Barcelona, Spain.  At The Moorg (club) in Barcelona, it was almost pitch dark other than a spotlight by the DJ booth that flashes on and off every second or so.  I took this photo with my Sony point & shoot digital camera by trapping the camera and keeping the shutter open between multiple flashes.  This shot was the shot that inspired me to want to work with the dynamic lighting conditions of dance music events.
+    caption: In August 2002, I traveled to Ibiza and Barcelona, Spain.  At The Moorg (club) in Barcelona, it was almost pitch dark other than a spotlight by the DJ booth that flashes on and off every second or so.  I took this photo with my Sony point & shoot digital camera by trapping the camera and keeping the shutter open between multiple flashes.  This shot inspired me to want to work with the dynamic lighting conditions of dance music events.
     videoUrl: ~
   - name: travel-06-IguazuFallsBrazil2004
-    caption: Iguazu Falls Brazil 2004.
+    caption: Iguazu Falls Brazil.  I had gone to Brazil for Carnival in 2004 and went on a side trip to the Iguazu Falls and taken these next 3 photographs, but they have not seen the light of day till now.
     videoUrl: ~
   - name: travel-07-IguazuFallsBrazil2004
     caption: Iguazu Falls Brazil 2004.
@@ -64,37 +64,37 @@
     caption: Sander Van Doorn at Skill's ETD POP 2012.
     videoUrl: ~
   - name: music-02-DJ ValerieRubySkye100402
-    caption: DJ Valerie at Ruby Skye 2002.  This was the first event I shot where I realized what a strong connection the DJ have with their audience and it drove me to want to capture this energy.
+    caption: DJ Valerie and The Vibe Tribe at Ruby Skye 2002.  This was the event I realized the strong connection the DJ can have with their audience, and it drove me to wanting to capture this energy.
     videoUrl: ~
   - name: music-03-PachaIbiza071503
     caption: The island of Ibiza, Spain is World reknown as a party destination.  Club Pacha, Ibiza 7/15/03.
     videoUrl: ~
   - name: music-04-Eventvibe.comPoolPartySFLoveParade100204
-    caption: In 2004 the Love Parade came San Francisco.  I produced an eventvibe.com party the day after 10/2/04.
+    caption: In 2003 I had gone to Berlin to cover the Love Parade.  In 2004 the Love Parade came to San Francisco, and I produced an eventvibe.com pool party the following day.
     videoUrl: ~
   - name: music-05-Eventvibe.comPoolPartyIbizaHotel2004
-    caption: Flyer for the Eventvibe.com Pool party 10/3/04 making use of pool party photos from Miami WMC 2003.  
+    caption: Flyer for the Eventvibe.com Pool party on October 3rd, 2004, making use of the pool party photos from Miami WMC 2003.  
     videoUrl: ~
   - name: music-06-FrenchyLeFreakFluidYachtParty
     caption: Every year in March, those in the electronic music industry gather in Miami for a week long of events and parties.  DJ Frenchy Le Freak at Fluid UltraLounge's Yacht party Miami Winter Music Conference (WMC) 2004. 
     videoUrl: ~
   - name: music-07-MorilloSubliminalSpaceMiami032305
-    caption: Erick Morillo at Subliminal Record's event at Club Space Miami during WMC 2005.
+    caption: Erick Morillo at Subliminal Record's event at Club Space Miami during WMC 2005.  A 12 hour event that goes on through the following day.
     videoUrl: ~
   - name: music-08-2ndSunday040613
-    caption: One of the most famous and long running house music party in San Francisco was 2nd Sunday every 2nd Sunday of the month during the summer months.  Photo taken in 2013. 
+    caption: One of the most famous and long running house music party in San Francisco was 2nd Sunday every 2nd Sunday of the month during the summer months.  Photo taken in 2004.
     videoUrl: ~
   - name: music-09-MezzanineSFKaskadeRemedy10Year
-    caption: From my first night out with Nikon D3s, which at the time took low photography to the next level.  Kaskade at The Mezzanine in San Francisco.
+    caption: Photographing Kaskade at The Mezzanine in San Francisco 2010 on my first night out with my Nikon D3s.  At the time the D3s took low photography to the next level.
     videoUrl: ~
   - name: music-10-burningman090405
     caption: In 2005 I went to Burning Man.
     videoUrl: ~
   - name: music-11-TiestoBurningman090405
-    caption: DJ Tiesto was a surprise guest DJ at the Opulent Temple's camp at Burning Man 2005.  This shot was special to me because I had to climb up a scafford about 30 feet high with all my camera equipment to get it.  It also ended up been used on the flyer for an Opulent Temple fundraiser.
+    caption: DJ Tiesto was a surprise guest DJ at Opulent Temple's sound camp at Burning Man 2005.  This shot was special to me, because I had to climb up a scafford about 30 feet high with all my camera equipment to get it.  It also ended up been used on the flyer of Opulent Temple's fundraiser event.
     videoUrl: ~
   - name: music-12-SasonBishopParryPlanetBVideo
-    caption: Sason Bishope Parry performs for Planet B's End of the World video shoot at Temple Nightclub in San Francisco 2006.
+    caption: Sason Bishope Parry performs for the making of Planet B's End of the World video, shot at Temple Nightclub in San Francisco 2006.
     videoUrl: ~
   - name: music-13-SF1015RaindanceChineseNewYear012706
     caption: Raindance Chinese New Year at 1015 Folsom 1/27/06
@@ -115,14 +115,14 @@
     caption: Kaskade at Electric Zoo festival in NYC 2010.
     videoUrl: ~
   - name: music-19-SFPopArminVanBuuren
-    caption: Armin Van Burren at ETD Pop
+    caption: Armin Van Burren at ETD Pop 2010.
     videoUrl: ~
   - name: music-20-TiestoZoukoutSingapore121110
     caption: DJ Tiesto at Zoukout festival in Singapore 2010.
     videoUrl: ~
 - title: fashion
   slug: /fashion
-  description: Through covering fashion shows, I got in to fashion photography.  I learned that photographing fashion is about coming up with the concept, collaboration between the designers, makeup artists and models, and conveying the mood.
+  description: Through covering fashion shows, I got in to fashion photography.  What I enjoyed most of all in photographing fashion is the collaboration process of coming up with the concept and working with the designers, stylist, makeup artists and models to bring the concept to reality.
   photos:
   - name: fashion-01-BenSammieKateKnuvelderKenChen
     caption: Models Benjamin Kline and Sammie Smith in designer Ken Chen and jewelry designer Kate Knuvelder.
@@ -131,31 +131,31 @@
     caption: Pret-A-Porter fashion show at Press Club, San Francisco 6/26/10
     videoUrl: ~
   - name: fashion-03-CharlestonPierceFashionShowKarenCaldwell2013
-    caption: Charleston Pierce Fashion Show at Westin St. Westin 2013.  Featuring designer Karen Caldwell.
+    caption: Charleston Pierce FYMO Fashion Show featuring designer Karen Caldwell at Westin St. Westin 2013.
     videoUrl: ~
   - name: fashion-04-CharlestonPierceFashionShowZoeBikini2013
-    caption: Charleston Pierce Fashion Show at Westin St. Westin 2013.  Featuring designer Zoe Bikini.
+    caption: Charleston Pierce FYMO Fashion Show featuring designer Zoe Bikini at Westin St. Westin 2013.
     videoUrl: ~
   - name: fashion-05-CharlestonPierceFashionShow2013
-    caption: Charleston Pierce Fashion Show at Westin St. Westin 2013.
+    caption: Charleston Pierce FYMO Fashion Show featuring designer Gelareth Alam at Westin St. Westin 2013.  
     videoUrl: ~
   - name: fashion-06-MoniqueZhangWearableArt
-    caption: Designer Monique Zhang.  Spirit painting by Joshua Bernstein.  From Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.
+    caption: From designer Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.  Spirit painting by Joshua Bernstein.  
     videoUrl: ~
   - name: fashion-07-MicheleGatesWearableArt
-    caption: Socialite Michele Gates.  Designer Monique Zhang's Wearable Art.
+    caption: Socialite Michele Gates in designer Monique Zhang's Wearable Art with Joshua Bernstein's spirit painting.
     videoUrl: ~
   - name: fashion-08-ScarlettLaceyBannister
-    caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
+    caption: Model Scarlett Lash in designer Lacey Bannister's head dress.
     videoUrl: ~
   - name: fashion-09-ScarlettLaceyBannister
-    caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
+    caption: Model Scarlett Lash in designer Lacey Bannister's head dress.
     videoUrl: ~
   - name: fashion-10-KateKnuvelderBlackV051212
-    caption: Model Jessica Sanchez.  Designer Kate Knuvelder's chainmail head piece.  
+    caption: Black V Fashion Show featuring designer Kate Knuvelder's chainmail head piece.  
     videoUrl: ~
   - name: fashion-11-JessicaKateKnuvelder
-    caption: Black V Fashion Show.  Designer Kate Knuvelder's chainmail head piece.
+    caption: Model Jessica Sanchez featuring designer Kate Knuvelder's chainmail head piece.
     videoUrl: ~
   - name: fashion-12-KateKnuvelder
     caption: Necklace by designer Kate Knuvelder.
@@ -180,19 +180,19 @@
     caption: Shopping in Union Square.  Models Kenneth Roebuck and Shai White.
     videoUrl: ~
   - name: lifestyle-04-OlyaLeslie
-    caption: Sharing with your mobile phones.  Model Leslie Fu.  Creative direction Olya Rostov.
+    caption: Sharing with your mobile phones.  Models Leslie Fu and Olya Rostov.  Creative direction by Olya Rostov.
     videoUrl: ~
   - name: lifestyle-05-KennethRoebuck
-    caption: Kenneth Roebuck.  Dance.
+    caption: Dance.  Model Kenneth Roebuck.  Makeup by Janet Jade.
     videoUrl: ~
   - name: lifestyle-06-KennethRoebuck2
-    caption: Kenneth Roebuck.  Fitness.
+    caption: Fitness.  Model Kenneth Roebuck.  Makeup by Janet Jade.
     videoUrl: ~
   - name: lifestyle-07-CloudJumpingElbow
     caption: Cloud Mykals Treasure Island.
     videoUrl: ~
   - name: lifestyle-08-CloudPacifica042812
-    caption: Model Actor Cloud Mykals, Pacifica.
+    caption: Model / Actor Cloud Mykals, Pacifica.
     videoUrl: ~
   - name: lifestyle-09-CloudMykalsCrewPacifica042812
     caption: Walking Forward with Purpose.
@@ -205,7 +205,7 @@
     videoUrl: ~
 - title: portrait
   slug: /portrait
-  description: An astrologist once told me she sees me getting in to portrait photography, capturing the soul of a person.  Portrait photography can range from a professional headshot for conveying a message of confidence or openess to capturing the spirit, essence or soul of a person.  It can be fashion inspired or it can be capturing a person at their natural state of being.
+  description: An astrologist once told me she sees me getting in to portrait photography, capturing the soul of a person.  Portrait photography can range from a professional headshot for conveying a message of confidence, approachability, or friendless to capturing the spirit, essence or soul of a person.  It can be fashion inspired or it can be capturing a person at their natural state of being.
   photos:
   - name: portrait-01-CharlestonRunningforSuccess
     caption: Model, actor, model coach, fashion show producer, motivational speaker Charleston Pierce Running for Success.
@@ -217,10 +217,10 @@
     caption: Scarlett Lash in corset by Atussa Couture.  Fashion inspired portrait.  Post-production by Christian Lee.
     videoUrl: ~
   - name: portrait-04-MissyM
-    caption: Artist Missy M at location of her mural, Dream of Something Beautiful, Oakland Chinatown.
+    caption: Artist Missy M at location of her mural, Dream of Something Beautiful, in Oakland Chinatown.
     videoUrl: ~
   - name: portrait-05-MissyM
-    caption: Missy M.  Ready for the Edwardian Ball.
+    caption: Missy M. ready for the Edwardian Ball.
     videoUrl: ~
   - name: portrait-06-Lydia
     caption: Business portrait.
@@ -244,16 +244,16 @@
     caption: Aubrey Rinehart.  Window light.
     videoUrl: ~
   - name: portrait-13-AtlasLasairTreasureIsland
-    caption: AtlasLasair.  Musician/actor.
+    caption: Musician/actor Atlas Lasair.
     videoUrl: ~
   - name: portrait-14-CloudMykalsCrewRockStars
     caption: Cloud Mykals and crew. Rock stars style shoot.
     videoUrl: ~
   - name: portrait-15-MichellePogrebinsky
-    caption: Michelle Pogrebinsky.  Natural look.  On location at Maya Ma's birthday fashion show.
+    caption: Michelle Pogrebinsky.  Natural look.  On location at designer Maya Ma's birthday fashion show.
     videoUrl: ~
   - name: portrait-16-MichellePogrebinsky
-    caption: Michelle Pogrebinsky.  Fashion inspired.  On location at Maya Ma's birthday fashion show.
+    caption: Michelle Pogrebinsky.  Fashion inspired.  On location at designer Maya Ma's birthday fashion show.
     videoUrl: ~
   - name: portrait-17-YanaHeadshot
     caption: Professional headshot.
@@ -263,7 +263,7 @@
   description: Technology conferences, expos, meetups, and hackathons.
   photos:
   - name: techEvents-01-TonyParisi
-    caption: Tony Parisi is a VR pioneer, who later became the head of VR/AR at Unity.  After I experienced VR for the first time I knew I had to get back to developing technology again.  In 2016, I produced a podcast on VR, DopamineVR, and Tony hosted the show along with my friend David Oh.  (Side story - David was a partner at GasInk magazine, the first magazine I shot for in 2002)
+    caption: Tony Parisi is a Virtual Reality (VR) pioneer, who later became the head of VR/AR at Unity.  After I experienced VR for the first time I knew I had to get back to developing technology again.  In 2016, I produced a podcast on VR, DopamineVR, and Tony hosted the show along with David Oh.
     videoUrl: ~
   - name: techEvents-02-MikeySiegelConsciousnessVRmeetupUploadVR021917
     caption: In 2017 UploadVR hosted a series of VR events.  Here Mikey Siegel of Consciousness Hacking gave a presentation at the Consciousness VR meetup.
@@ -275,7 +275,7 @@
     caption: Neuroscentist Adam Gazzaley of UCSF's Neuroscape and JAZZ Venture Partners.  XTech 2016.
     videoUrl: ~
   - name: techEvents-05-TimFerrisAdamGazzaley
-    caption: Tim Ferris, of 4-Hour Workweek and Tim Ferriss Show, and Adam Gazzaley.  XTech 2016.
+    caption: Tim Ferris, of 4-Hour Workweek, and Adam Gazzaley.  XTech 2016.
     videoUrl: ~
   - name: techEvents-06-EmotivDemoXTech051816
     caption: Emotiv demo'ing at XTech 2016.
@@ -296,45 +296,56 @@
     caption: MicrodoseVR featuring the artwork of Android Jones is a VR experience I'm looking forward to.  Xtech 2017.  
     videoUrl: ~
   - name: techEvents-12-ChrisMurphyNiagraUnrealEngineGDC2019
-    caption: Chris Murphy giving a presentation on Niagra particle system for VFX at Unreal Engine Learning Theater at Games Developer Conference GDC 2019
+    caption: Chris Murphy giving a presentation on Unreal Engine's Niagra VFX particle system at the Games Developer Conference (GDC) in San Francisco 2019.
     videoUrl: ~
 - title: restaurants
   slug: /restaurants
-  description: Food, drinks, architectures photographing in restaurants and bars.
+  description: Food, drinks, architectures photography in restaurants and bars.
   photos:
   - name: restaurants-01-BlueDoor1
     caption: Cured Meat Appetizer Board at The Blue Door Restaurant
     videoUrl: ~
   - name: restaurants-02-BlueDoor2
-    caption: Chocolate cake at The Blue Door Restaurant
+    caption: Vanilla crème brûlée with vanilla whipped cream, raspberries, cardamon short bread cookies at The Blue Door Restaurant.
     videoUrl: ~
   - name: restaurants-03-BlueDoor3
-    caption: Vanilla crème brûlée with vanilla whipped cream, raspberries, cardamon short bread cookies at The Blue Door Restaurant
+    caption: Chocolate cake at The Blue Door Restaurant.
     videoUrl: ~
-  - name: restaurants-04-ThirstyBearRestaurantInterior
-    caption: One of the first restaurants I shot was the Thirsty Bear Brewing Company.
+  - name: restaurants-04-Salmon
+    caption: Salmon
     videoUrl: ~
   - name: restaurants-05-LaMar
     caption: Salmon at La Mar Cebicheria Peruana
     videoUrl: ~
   - name: restaurants-06-LaMar2
-    caption: Ahi Tuna at La Mar Cebicheria Peruana
+    caption: Ahi Tuna bowl at La Mar Cebicheria Peruana
     videoUrl: ~
   - name: restaurants-07-LaMar3
     caption: Appetizer at La Mar Cebicheria Peruana
     videoUrl: ~
-  - name: restaurants-08-Salmon
-    caption: Salmon
+  - name: restaurants-08-ThirstyBearRestaurantInterior
+    caption: One of the first restaurants I shot was the Thirsty Bear Brewing Company in San Francisco.
+    videoUrl: ~
+  - name: restaurants-09-HotelViaRooftop
+    caption: Hotel Via Rooftop, San Francisco.
+    videoUrl: ~
+  - name: restaurants-10-CBD
+    caption: Today I no longer drink, but there was a time when I enjoyed a good cocktail.  Cold Drinks Bar, San Francisco.
+    videoUrl: ~
+  - name: restaurants-11-CBD
+    caption: Cold Drinks Bar, San Francisco.
+    videoUrl: ~
+  - name: restaurants-12-CBD
+    caption: Cold Drinks Bar, San Francisco.
     videoUrl: ~
 - title: video
   slug: /video
-  description: Videos.
+  description: ~
   photos:
   - name: video-01-MaraAlexWedding
     caption: Mara and Alex's Wedding.
     videoUrl: https://youtu.be/5Z1WgnSeee4
   - name: video-02-MuralPaintingMissyM
-    caption: Mural Painting by Missy M.  Music by Jason Martineau.  Unfinished.
+    caption: Mural Painting by Missy M.  Music by Jason Martineau.  Unfinished due to hard to hard drive crash but I decided to put this up anyways.
     videoUrl: https://youtu.be/RA-nSnuKYis
-
 
