Removed YAML for About page content, Google Analytics Site Speed Sample Rate from 1% to 100%

--- a/src/portfolios/portfolios.yml
+++ b/src/portfolios/portfolios.yml
@@ -140,10 +140,10 @@
     caption: Charleston Pierce FYMO Fashion Show featuring designer Gelareth Alam at Westin St. Westin 2013.  
     videoUrl: ~
   - name: fashion-06-MoniqueZhangWearableArt
-    caption: From designer Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.  Spirit painting by Joshua Bernstein.  
+    caption: From designer Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.  Spirit painting by Joshua Bernstein.
     videoUrl: ~
   - name: fashion-07-MicheleGatesWearableArt
-    caption: Socialite Michele Gates in designer Monique Zhang's Wearable Art with Joshua Bernstein's spirit painting.
+    caption: Socialite Michele Gates in designer Monique Zhang's Wearable Art with Joshua Bernstein's spirit painting.  Creative direction by Monique Zhang.
     videoUrl: ~
   - name: fashion-08-ScarlettLaceyBannister
     caption: Model Scarlett Lash in designer Lacey Bannister's head dress.
