Moved About content to markdown file

--- a/src/content/portfolios/portfolios.yml
+++ b/src/content/portfolios/portfolios.yml
@@ -120,6 +120,9 @@
   - name: music-20-TiestoZoukoutSingapore121110
     caption: DJ Tiesto at Zoukout festival in Singapore 2010.
     videoUrl: ~
+  - name: music-21-HaloDrumGabrielGold
+    caption: Nowadays I find myself drawn to the meditative sounds of the hang (and halo) drum.  Gabriel Gold playing the Halo drum and Sam Jackson playing the crystal bowl at Grace Cathedral 10/10/14.
+    videoUrl: ~
 - title: fashion
   slug: /fashion
   description: Through covering fashion shows, I got in to fashion photography.  What I enjoyed most of all in photographing fashion is the collaboration process of coming up with the concept and working with the designers, stylist, makeup artists and models to bring the concept to reality.
