--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "@styled-icons/fa-solid": "^10.22.0",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.67",
+    "gatsby": "^2.24.72",
     "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-google-analytics": "^2.3.15",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-google-analytics": "^2.3.17",
     "gatsby-plugin-google-fonts-v2": "0.0.6",
-    "gatsby-plugin-google-tagmanager": "^2.3.14",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-plugin-google-tagmanager": "^2.3.15",
+    "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-offline": "^3.2.31",
+    "gatsby-plugin-react-helmet": "^3.3.13",
     "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-sitemap": "^2.4.14",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-source-filesystem": "^2.3.32",
+    "gatsby-plugin-sharp": "^2.6.39",
+    "gatsby-plugin-sitemap": "^2.4.15",
+    "gatsby-plugin-styled-components": "^3.3.13",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-cloudinary": "^1.1.3",
     "gatsby-transformer-remark": "^2.8.38",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "gatsby-transformer-yaml": "^2.4.13",
+    "gatsby-transformer-sharp": "^2.5.17",
+    "gatsby-transformer-yaml": "^2.4.14",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
