--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@styled-icons/fa-solid": "^10.22.0",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.72",
+    "gatsby": "^2.24.73",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-google-analytics": "^2.3.17",
@@ -16,11 +16,11 @@
     "gatsby-plugin-google-tagmanager": "^2.3.15",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.31",
-    "gatsby-plugin-react-helmet": "^3.3.13",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.6.39",
+    "gatsby-plugin-sharp": "^2.6.40",
     "gatsby-plugin-sitemap": "^2.4.15",
-    "gatsby-plugin-styled-components": "^3.3.13",
+    "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-cloudinary": "^1.1.3",
@@ -35,6 +35,7 @@
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
     "react-player": "^2.6.2",
+    "react-swipeable": "^5.5.1",
     "react-tooltip": "^4.2.10",
     "styled-components": "^5.2.0",
     "styled-normalize": "^8.0.7",
